# chgraph

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude/skills/chdb-reference/: SKILL.md
.claude/skills/chgraph-architecture-contract/: SKILL.md
.claude/skills/chgraph-build-and-env/: SKILL.md
.claude/skills/chgraph-change-control/: SKILL.md
.claude/skills/chgraph-debugging-playbook/: SKILL.md
.claude/skills/chgraph-diagnostics-and-tooling/: SKILL.md
.claude/skills/chgraph-failure-archaeology/: SKILL.md
.claude/skills/chgraph-git-evolution-campaign/: SKILL.md
docs/adr/: 0001-v01-implementation-decisions.md  0002-deprecation-aware-ranking.md  0003-subtoken-jaccard-lexical.md  0004-vector-semantic-signal.md
evals/: corpus.yaml  precision_audit.py  ranking_goldens.yaml  semantic_goldens.yaml
evals/goldens/: architecture.yaml  caller_callee.yaml  data_flow.yaml  django.yaml  impact.yaml  symbol_lookup.yaml
evals/runs/: precision-2026-07-08.json  rank-2026-07-04.json  rank-2026-07-08.json  run-2026-07-03-A-2a3e-band.json  run-2026-07-03-A-2a3e-r1.json  run-2026-07-03-A-2a3e-r1.md  run-2026-07-03-A-2a3e-r2.json  run-2026-07-03-A-2a3e-r2.md  run-2026-07-03-A-2a3e-r3.json  run-2026-07-03-A-2a3e-r3.md  run-2026-07-03-A-6779.json  run-2026-07-03-A-6779.md  run-2026-07-04-C-35c8-band.json  run-2026-07-04-C-35c8-r1.json  run-2026-07-04-C-35c8-r1.md  run-2026-07-04-C-35c8-r2.json  run-2026-07-04-C-35c8-r2.md  run-2026-07-04-C-35c8-r3.json  run-2026-07-04-C-35c8-r3.md  run-2026-07-08-A-django-iso.json  run-2026-07-08-A-django-iso.md  run-2026-07-08-A-django-n3-band.json  run-2026-07-08-A-django-n3-r1.json  run-2026-07-08-A-django-n3-r1.md  run-2026-07-08-A-django-n3-r2.json  run-2026-07-08-A-django-n3-r2.md  run-2026-07-08-A-django-n3-r3.json  run-2026-07-08-A-django-n3-r3.md  run-2026-07-08-C-django-iso.json  run-2026-07-08-C-django-iso.md  run-2026-07-08-C-django-n3-band.json  run-2026-07-08-C-django-n3-r1.json  run-2026-07-08-C-django-n3-r1.md  run-2026-07-08-C-django-n3-r2.json  run-2026-07-08-C-django-n3-r2.md  run-2026-07-08-C-django-n3-r3.json  run-2026-07-08-C-django-n3-r3.md
src/chgraph/: cli.py  client.py  daemon.py  embeddings.py  evolution.py  gitingest.py  indexer.py  parse_python.py  paths.py  schema.py  search.py  shim.py  status.py  store.py  text.py  traverse.py
tests/: conftest.py
tests/chdb/: test_cli.py  test_daemon.py  test_e2e_staleness.py  test_evolution.py  test_gitingest.py  test_indexer.py  test_schema_roundtrip.py  test_search.py  test_shim_e2e.py  test_store.py  test_traverse.py
tests/eval/: test_agent.py  test_conditions.py  test_goldens.py  test_judge.py  test_ranking.py  test_report.py  test_runner.py
tests/fixtures/: make_synth_repo.sh
tests/unit/: test_parse_python.py  test_paths.py  test_scaffold.py  test_shim_imports.py
(+21 files in other folders)
