[project]
name = "chgraph"
version = "0.1.0"
description = "chdb-backed codebase knowledge graph MCP server"
requires-python = ">=3.12"
dependencies = [
    "chdb==4.2.0",          # resolves chdb-core 26.5.0; chdb.__version__ reports 26.5.0
    "mcp>=1.28,<2",
    "tree-sitter>=0.26,<0.27",
    "tree-sitter-python>=0.25",
    "pydantic>=2,<3",
]

[dependency-groups]
dev = ["pytest>=9"]

[project.scripts]
chgraph = "chgraph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chgraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# macOS AF_UNIX sockaddr_un limit is ~104 bytes; pytest's default basetemp
# (/private/var/folders/.../pytest-of-<user>/pytest-NNN/<test-id>/) is long
# enough that a real deployment path (~/.local/share/chgraph/<slug>/daemon.sock,
# well under the limit per chgraph-run-and-operate §1) still overflows once nested
# under pytest's tmp_path in test_daemon.py. Force a short basetemp so unix-socket
# tests can bind at all; does not change any test code or assertions.
addopts = "--basetemp=/tmp/chgraph-pytest"
